# soft_matrix

./: .gitignore  Cargo.toml  LICENSE  Matrix worksheets.xlsx  README.md  Releases.md  build.rs  options.md  soft_matrix.code-workspace
.github/workflows/: check-and-lint.yaml  test.yaml
Documentation/: How is Stereo Upmixed to Surround Sound.md  How soft_matrix works.md  Samples.md  The loud flag.md
Documentation/How is Stereo Upmixed to Surround Sound/Sources/: Stereo - Front Center.xcf  Stereo - Left Center.xcf  Stereo - Left.xcf  Stereo - Rear Center.xcf  Stereo - Rear Side.xcf  Surround - Front Center.xcf  Surround - Left.xcf  Surround - Rear Side.xcf  Surround - Right.xcf  guitar - large.xcf  guitar.xcf  waveform - inverted quiet.xcf  waveform - inverted.xcf  waveform - large.xcf  waveform - quiet.xcf
Documentation/How it works/Sources/: Stereo - Right.xcf  Stereo diagram.xcf  Surround - Left Middle.xcf  Surround - Rear Center.xcf  Surround diagram.xcf  noun-guitar-2594947.txt  noun-music-2594949.txt  waveform.xcf
Documentation/Samples/: An Introduction to the World of SQ Quadraphonic Sound - SQ.m4a  An Introduction to the World of SQ Quadraphonic Sound.m4a  Jon Anderson - Olias of Sunhillow - default.m4a  Jon Anderson - Olias of Sunhillow - horseshoe.m4a  Jon Anderson - Olias of Sunhillow.m4a  Pink Floyd - Dark Side of the Moon - default.m4a  Pink Floyd - Dark Side of the Moon - horseshoe.m4a  Pink Floyd - Dark Side of the Moon.m4a  Suzanne Cianne - Live Quadraphonic - QS.m4a  Suzanne Cianne - Live Quadraphonic.m4a
src/: logger.rs  main.rs  matrix.rs  options.rs  panner_and_writer.rs  panning_averager.rs  reader.rs  structs.rs  upmixer.rs  vecdeque_ext.rs  window_sizes.rs
