[package]
name = "soft_matrix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keepawake = "0.4.3"
rustfft = "6.0.1"
wave_stream = "0.5.0"
# Uncomment to test pre-release changes
# wave_stream = { git = "https://github.com/GWBasic/wave_stream.git", branch = "28-support-51-and-other-channel-layouts" }
