[package]
name = "soft_matrix"
version = "1.0.2"
authors = ["Andrew Rondeau"]
license = "MIT"
description = "Soft Matrix upmixes two-channel stereo to surround sound"
readme = "README.md"
homepage = "https://github.com/GWBasic/soft_matrix"
repository = "https://github.com/GWBasic/soft_matrix"
keywords = ["cli", "audio", "upmix", "surround"]
categories = ["command-line-utilities"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keepawake = "0.4.3"
nix = { version = "0.26.4", features = ["user"] }
rustfft = "6.0.1"
wave_stream = "0.5.0"
# Uncomment to test pre-release changes
# wave_stream = { git = "https://github.com/GWBasic/wave_stream.git", branch = "28-support-51-and-other-channel-layouts" }
